[package]
name = "kslm-rust"
version = "0.1.0"
edition = "2021"
description = "KSLM – KDE Simple Layout Manager (Wayland workaround)"
license = "GPL-3.0-or-later"

[[bin]]
name = "kslm-rust"
path = "src/kslm-rust.rs"

[dependencies]
zbus = { version = "4", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
anyhow = "1"
futures-util = "0.3"